# learnGameEngine

./: CMakeLists.txt  README.md  main.cpp
data/model/: cube.mesh
data/shader/: font.fs  unlit.fs
depends/freetype/lib/: freetyped.lib
depends/freetype/lib/pkgconfig/: freetype2.pc
depends/glfw/libs/: glfw3.lib
depends/rttr/cmake/: rttr-config.cmake
depends/spdlog/lib/cmake/spdlog/: spdlogConfig.cmake
depends/spdlog/lib/pkgconfig/: spdlog.pc
depends/timetool/: stopwatch.h
example/: login_scene.cpp  login_scene.h  main.cpp
src/: ShaderSource.h  VertexData.h  main.cpp  texture2d.cpp  texture2d.h
src/audio/: audio.cpp  audio.h
src/component/: component.cpp  component.h  game_object.cpp  game_object.h  transform.cpp  transform.h
src/control/: input.cpp  input.h  key_code.h
src/data_structs/: tree.cpp  tree.h
src/example/: main.cpp
src/render_device/: render_device.cpp  render_device.h  render_device_opengl.cpp  render_device_opengl.h
src/renderer/: camera.cpp  camera.h  font.cpp  font.h  material.cpp  material.h  mesh_filter.cpp  mesh_filter.h  mesh_render.cpp  mesh_render.h  shader.cpp  shader.h  texture2d.cpp  texture2d.h
src/ui/: ui_button.cpp  ui_button.h  ui_camera.cpp  ui_camera.h  ui_image.cpp  ui_image.h  ui_mask.cpp  ui_mask.h  ui_text.cpp  ui_text.h
src/utils/: application.cpp  application.h  debug.cpp  debug.h  screen.cpp  screen.h
